<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#000000">


    <TextView
        android:id="@+id/m1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="64dp"
        android:elevation="6dp"
        android:gravity="center_horizontal"
        android:text="@string/choose_the_correct_option"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/m2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/m2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="31dp"
        android:background="#FFFF"
        android:elevation="5dp"
        android:text="@string/opt1"
        android:textColor="#5C00FF"
        app:layout_constraintBottom_toTopOf="@+id/m3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m1"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/m3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="30dp"
        android:background="#FFFF"
        android:elevation="6dp"
        android:text="opt2"
        android:textColor="#5C00FF"
        app:layout_constraintBottom_toTopOf="@+id/m4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m2"
        tools:ignore="HardcodedText"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/m4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="70dp"
        android:background="#FFFF"
        android:text="@string/opt3"
        android:textColor="#5C00FF"
        app:layout_constraintBottom_toTopOf="@+id/m5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m3" />


    <Button
        android:id="@+id/m5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:background="#00BCD4"
        android:elevation="6dp"
        android:text="@string/go_back"
        android:textColor="#5C00FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m4"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/counttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_10"
        android:textColor="@color/White"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/m2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m1" />

</androidx.constraintlayout.widget.ConstraintLayout>